--- a/web/index.html
+++ b/web/index.html
@@ -17,9 +17,11 @@
     <body ng-app="mainApp" ng-controller="main_controller">
         <div class="container-fluid">
             <div class="row">
+                <!--Include file header.html-->
                 <div ng-include="'header.html'"></div>
             </div>
             <div class="row">
+                <!--Include file level1.html-->
                 <div ng-include="'level1.html'"></div>
             </div>
         </div>
